# haal-dex

./: .gitignore  README.md  execrice.md  pipeline_store.json  start-backend.ps1  start-backend.sh
backend/: personalities_store.json  pipeline_store.json  pyproject.toml  test_results.txt  test_sqlite_query.py
backend/app/: app_factory.py  builder_main.py  chat_main.py  config.py  main.py  pipeline_orchestrator.py
backend/app/api/: auth.py  chat.py  config.py  debug.py  files.py  metrics.py  output.py  personalities.py  pipeline.py  replay.py
backend/app/engine/: agent_factory.py  bedrock_embedding_backend.py  bedrock_runtime_proxy.py  chat_tools.py  escalation_detector.py  faiss_manager.py  github_copilot_model.py  graph_factory.py  model_factory.py  retrieval_router.py  sqlite_bm25_backend.py  tools.py
backend/app/middleware/: auth.py
backend/app/models/: __init__.py  auth.py  encryption.py  execution.py  faiss_models.py  files.py  metrics.py  personality.py  pipeline.py  session.py  templates.py
backend/app/services/: auth_service.py  chat_provider_service.py  config_parser.py  config_validator.py  copilot_auth.py  encryption_service.py  environment_injector.py  execution_logger.py  file_ingestion.py  memory_manager.py  metrics_collector.py  output_generator.py  personality_store.py  replay_engine.py  template_defaults.py  template_registry.py
backend/app/templates/: demo_html_report.j2
backend/chat_sessions/: session-1776505318210-pr3rkov.json  session-1776509003988-dm2vslp.json  session-1776509165463-09o1iq6.json  session-1776509493637-08a4l99.json  session-1776510384873-wy9e0d0.json  session-1776510520158-7ymwy5l.json  session-1776511323806-fh7lbm4.json  session-1776511766779-63q4awa.json  session-1776511818392-abkatfc.json  session-1776512105036-b9bhsjb.json  session-1776517000276-amgtdtw.json  session-1776517207103-7pdbbjo.json  session-1776517342324-6dsz9fn.json  session-1776517448782-w4ctdfs.json  session-1776675865601-ubs2ela.json
backend/data/: create_support_kb.py
backend/tests/integration/: __init__.py  (+4 more)
builder-solution/backend/: main.py  pyproject.toml
chat-solution/backend/: main.py  pyproject.toml
(+111 files in other folders)
